--- a/AutonomiaVeiculosAPI.Services/AutonomiaVeiculosAPI.Services.csproj
+++ b/AutonomiaVeiculosAPI.Services/AutonomiaVeiculosAPI.Services.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
