feat: application, ddd, infra e Ioc

--- a/AutonomiaVeiculosAPI.Application/AutonomiaVeiculosAPI.Application.csproj
+++ b/AutonomiaVeiculosAPI.Application/AutonomiaVeiculosAPI.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AutonomiaVeiculosAPI.Domain\AutonomiaVeiculosAPI.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
