--- a/AutonomiaVeiculosAPI.Services/AutonomiaVeiculosAPI.Services.csproj
+++ b/AutonomiaVeiculosAPI.Services/AutonomiaVeiculosAPI.Services.csproj
@@ -10,7 +10,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AutonomiaVeiculosAPI.Infra.IoC\AutonomiaVeiculosAPI.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
