feat: ajustes para banco SQL e Migrations

--- a/AutonomiaVeiculosAPI.Services/appsettings.json
+++ b/AutonomiaVeiculosAPI.Services/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  /* mapeamento da conexão do banco de dados */
+  "ConnectionStrings": {
+    "BdAutonomiaAPI": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BDAutonomiaAPI;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
-  "AllowedHosts": "*"
+
+  /* definir o modo de execução do DbContext */
+  "DatabaseProvider": "SqlServer",
+  //"DatabaseProvider": "InMemory"
 }
