feat: Mensageria e envio de emails. Inicio dos tests.

--- a/AutonomiaVeiculosAPI.Services/appsettings.json
+++ b/AutonomiaVeiculosAPI.Services/appsettings.json
@@ -7,4 +7,16 @@
   /* definir o modo de execução do DbContext */
   "DatabaseProvider": "SqlServer",
   //"DatabaseProvider": "InMemory"
+
+  "RabbitMQSettings": {
+    "Url": "amqps://teoszmsz:4KmycE9xP6knkGaAodav4IlziNjwBhJM@codfish.rmq.cloudamqp.com/teoszmsz",
+    "Queue": "users_api_autonomia"
+  },
+
+  /* definir as configurações da API de envio de emails */
+  "MailJetSettings": {
+    "ApiKey": "0b1dfe5382c1abe4a4785a90d149c708",
+    "SecretKey": "f61075dcc62c0016d540069f5c89147c",
+    "Sender": "teco.teodoro11@gmail.com"
+  }
 }
