--- a/AutonomiaVeiculosAPI.Tests/AutonomiaVeiculosAPI.Tests.csproj
+++ b/AutonomiaVeiculosAPI.Tests/AutonomiaVeiculosAPI.Tests.csproj
@@ -8,10 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="UnitTest1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.5" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="FluentAssertions" Version="8.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.11" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AutonomiaVeiculosAPI.Services\AutonomiaVeiculosAPI.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
